<resources>
    <string name="app_name">Doctor Finder</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_log_in">Login </string>
    <string name="action_sign2_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_search">"Quick Search"</string>
    <string name="action_signup_with_facebook">"Signup with facebook"</string>
    <string name="action_signup_with_google">"Signup with Google+"</string>
    <string name="action_login_with_facebook">"Login with facebook"</string>
    <string name="action_login_with_google">"Login with Google+"</string>
    <string name="text_firstName">First Name</string>
    <string name="text_lastName">Last Name</string>
    <string name="text_emailAdress">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_repeatPassword">repeat Password</string>
    <string name="text_useyourEmail">or use your email</string>
    <string name="text_useyourAccount">or use your account</string>
    <string name="text_username">Username</string>
    <string name="text_forgotPassword">forgot password?</string>
    <string name="text_rememberMe">Remember me</string>
    <string name="text_signupNow">SignUpNow</string>
    <string name="namy">Not a Member Yet?</string>

    <string name="facebook_app_id">722994014468396</string>
    <string name="namelabel">"Name : "</string>
    <string name="speciallabel">"Specialization : "</string>
    <string name="feedbacklabel">"Feedback : "</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">Profilo</string>
    <string name="gestisci">Gestisci Prenotazioni</string>
    <string name="suggerisci">Suggerisci Dottore</string>
    <string name="logout">Logout</string>
    <string name="about">About Doctor Finder</string>
    <string name="docfinder">Doctor Finder</string>
    <string name="support">Supporto</string>

    <string-array name="Specializations">
        <item>Dentista</item>
        <item>Ginecologo</item>
        <item>Odontoiatra</item>
        <item>Nutrizionista</item>
        <item>Giovanni</item>
        <item>Vincenzo</item>
        <item>Baccerico</item>
        <item>Starnino</item>
        <item>Doctor Finder</item>
        <item>Pediatra</item>
        <item>Fisioterapista</item>
        <item>Medico Legale</item>
        <item>Chirurgo Plastico</item>
    </string-array>

    <string-array name="cities">
        <item>Roma</item>
        <item>Viterbo</item>
        <item>Milano</item>
        <item>Napoli</item>
        <item>Genova</item>
        <item>Pisa</item>
        <item>Terni</item>
        <item>Perugia</item>
        <item>Latina</item>
        <item>Catania</item>
    </string-array>
    <string name="title_activity_doctor_maps_fragment">Map</string>
</resources>
