<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    card_view:cardElevation="20dp"
    android:foreground="?attr/selectableItemBackground"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namelabel"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/namelabel"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/speciallabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namelabel"
        android:text="@string/speciallabel"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/speciallabel"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/feedbacklabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speciallabel"
        android:text="@string/feedbacklabel"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/special"
        android:layout_toRightOf="@+id/feedbacklabel"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

</RelativeLayout>
</android.support.v7.widget.CardView>

